--- a/app/javascript/mastodon/locales/defaultMessages.json
+++ b/app/javascript/mastodon/locales/defaultMessages.json
@@ -542,6 +542,10 @@
         "id": "navigation_bar.mutes"
       },
       {
+        "defaultMessage": "Trending now",
+        "id": "navigation_bar.trending_tags"
+      },
+      {
         "defaultMessage": "Information below may reflect the user's profile incompletely.",
         "id": "account.disclaimer_full"
       },
