Restore "trending hashtags" translations.

--- a/app/javascript/mastodon/locales/defaultMessages.json
+++ b/app/javascript/mastodon/locales/defaultMessages.json
@@ -821,6 +821,10 @@
   {
     "descriptors": [
       {
+        "defaultMessage": "Trending now",
+        "id": "trends.header"
+      },
+      {
         "defaultMessage": "People",
         "id": "search_results.accounts"
       },
@@ -1047,6 +1051,23 @@
       }
     ],
     "path": "app/javascript/mastodon/features/follow_requests/index.json"
+  },
+  {
+    "descriptors": [
+      {
+        "defaultMessage": "Refresh",
+        "id": "trends.refresh"
+      },
+      {
+        "defaultMessage": "Trending now",
+        "id": "trends.header"
+      },
+      {
+        "defaultMessage": "Load more",
+        "id": "status.load_more"
+      }
+    ],
+    "path": "app/javascript/mastodon/features/getting_started/components/trends.json"
   },
   {
     "descriptors": [
@@ -1613,6 +1634,19 @@
       }
     ],
     "path": "app/javascript/mastodon/features/status/index.json"
+  },
+  {
+    "descriptors": [
+      {
+        "defaultMessage": "Trending now",
+        "id": "trends.header"
+      },
+      {
+        "defaultMessage": "Refresh trends",
+        "id": "trends.refresh"
+      }
+    ],
+    "path": "app/javascript/mastodon/features/trends/index.json"
   },
   {
     "descriptors": [
