--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -890,6 +890,8 @@ ja:
 
       <p>あなたはいつでもアカウントの削除を要求できます。削除は取り消すことができません。</p>
 
+      <p>アカウントの削除は<a href="https://taruntarun.net/@mayaeh">サーバー管理者</a>までダイレクトメッセージかメールにて申請してください。原則として本人による申請のみ受け付けます。</p>
+
       <hr class="spacer"/>
 
       <h3 id="cookies">クッキーを使用していますか？</h3>
@@ -924,9 +926,11 @@ ja:
 
       <p>プライバシーポリシーの変更を決定した場合、このページに変更点を掲載します。</p>
 
-      <p>この文章のライセンスはCC-BY-SAです。最終更新日は2018年3月7日です。</p>
+      <p>この文章のライセンスはCC-BY-SAです。最終更新日は2019年2月6日です。</p>
 
       <p>オリジナルの出典: <a href="https://github.com/discourse/discourse">Discourse privacy policy</a></p>
+
+      <p>2019年2月6日: アカウント削除に関する規定を追加</p>
     title: "%{instance} 利用規約・プライバシーポリシー"
   themes:
     contrast: ハイコントラスト
