Add the slack-like-mastodon theme and copy css values from https://github.com/mohemohe/slack-like-mastodon. Add translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1007,6 +1007,7 @@ en:
     contrast: Mastodon (High contrast)
     default: Mastodon (Dark)
     mastodon-light: Mastodon (Light)
+    slack-like-mastodon: like-slack
   time:
     formats:
       default: "%b %d, %Y, %H:%M"
