--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1006,6 +1006,7 @@ ja:
     contrast: Mastodon (ハイコントラスト)
     default: Mastodon (ダーク)
     mastodon-light: Mastodon (ライト)
+    slack-like-mastodon: like-slack
   time:
     formats:
       default: "%Y年%m月%d日 %H:%M"
