--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -253,7 +253,6 @@
   "navigation_bar.public_timeline": "連合タイムライン",
   "navigation_bar.security": "セキュリティ",
   "navigation_bar.trending_tags": "トレンドタグ",
-  "notification.and_n_others": "and {count, plural, one {# other} other {# others}}",
   "notification.favourite": "{name}さんがあなたのトゥートをお気に入りに登録しました",
   "notification.follow": "{name}さんにフォローされました",
   "notification.mention": "{name}さんがあなたに返信しました",
@@ -385,6 +384,7 @@
   "upload_form.undo": "削除",
   "upload_modal.analyzing_picture": "画像を解析中…",
   "upload_modal.apply": "適用",
+  "upload_modal.description_placeholder": "A quick brown fox jumps over the lazy dog",
   "upload_modal.detect_text": "画像からテキストを検出",
   "upload_modal.edit_media": "メディアを編集",
   "upload_modal.hint": "画像をクリックするか円をドラッグするとサムネイルとなる中心を決めることができます",
