--- a/config/locales/simple_form.ja.yml
+++ b/config/locales/simple_form.ja.yml
@@ -140,7 +140,7 @@ ja:
         report: 通報を受けた時にメールで通知する
         trending_tag: 未承認のハッシュタグが人気の時にメールで通知する
       tag:
-        listable: ディレクトリへの使用を許可する
+        listable: 検索とディレクトリへの使用を許可する
         trendable: トレンドへの表示を許可する
         usable: トゥートへの使用を許可する
     'no': いいえ
