--- a/config/locales/simple_form.ja.yml
+++ b/config/locales/simple_form.ja.yml
@@ -138,7 +138,7 @@ ja:
         pending_account: 新しいアカウントの承認が必要な時にメールで通知する
         reblog: トゥートがブーストされた時にメールで通知する
         report: 通報を受けた時にメールで通知する
-        trending_tag: 未承認のハッシュタグが人気の時にメールで通知する
+        trending_tag: 未審査のハッシュタグが人気の時にメールで通知する
       tag:
         listable: 検索とディレクトリへの使用を許可する
         trendable: トレンドへの表示を許可する
