--- a/config/locales/simple_form.ja.yml
+++ b/config/locales/simple_form.ja.yml
@@ -16,7 +16,7 @@ ja:
         bot: このアカウントは主に自動で動作し、人が見ていない可能性があります
         context: フィルターを適用する対象 (複数選択可)
         digest: 長期間使用していない場合と不在時に返信を受けた場合のみ送信されます
-        discoverable_html: <a href="%{path}" target="_blank">ディレクトリ</a> は興味や活動をもとにアカウントを見つけることを可能にします。 掲載には %{min_followers} 人以上のフォロワーが必要です
+        discoverable: ディレクトリはあなたのアカウントをより多くの人に見つけてもらうためのひとつの手段です。
         email: 確認のメールが送信されます
         fields: プロフィールに表として4つまでの項目を表示することができます
         header: "%{size}までのPNG、GIF、JPGが利用可能です。 %{dimensions}pxまで縮小されます"
@@ -61,7 +61,7 @@ ja:
       account_warning_preset:
         text: プリセット警告文
       admin_account_action:
-        include_statuses: メールに通報されたトゥートを含める
+        include_statuses: 通報されたトゥートをメールに含める
         send_email_notification: メールでユーザーに通知
         text: カスタム警告文
         type: アクション
@@ -145,6 +145,7 @@ ja:
         trending_tag: 未審査のハッシュタグが人気の時にメールで通知する
       tag:
         listable: 検索とディレクトリへの使用を許可する
+        name: ハッシュタグ
         trendable: トレンドへの表示を許可する
         usable: トゥートへの使用を許可する
     'no': いいえ
