--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -53,7 +53,7 @@
   "column.blocks": "ブロックしたユーザー",
   "column.community": "ローカルタイムライン",
   "column.direct": "ダイレクトメッセージ",
-  "column.directory": "プロフィールを見る",
+  "column.directory": "ディレクトリ",
   "column.domain_blocks": "非表示にしたドメイン",
   "column.favourites": "お気に入り",
   "column.follow_requests": "フォローリクエスト",
@@ -63,7 +63,6 @@
   "column.notifications": "通知",
   "column.pins": "固定されたトゥート",
   "column.public": "連合タイムライン",
-  "column.status": "トゥート",
   "column_back_button.label": "戻る",
   "column_header.hide_settings": "設定を隠す",
   "column_header.moveLeft_settings": "カラムを左に移動する",
@@ -111,10 +110,10 @@
   "confirmations.reply.message": "今返信すると現在作成中のメッセージが上書きされます。本当に実行しますか？",
   "confirmations.unfollow.confirm": "フォロー解除",
   "confirmations.unfollow.message": "本当に{name}さんのフォローを解除しますか？",
-  "conversation.delete": "このやりとりを削除",
+  "conversation.delete": "会話を削除",
   "conversation.mark_as_read": "既読にする",
-  "conversation.open": "会話を表示する",
-  "conversation.with": "{names} を付ける",
+  "conversation.open": "会話を表示",
+  "conversation.with": "{names}",
   "directory.federated": "既知の連合より",
   "directory.local": "{domain} のみ",
   "directory.new_arrivals": "新着順",
@@ -268,7 +267,6 @@
   "navigation_bar.preferences": "ユーザー設定",
   "navigation_bar.public_timeline": "連合タイムライン",
   "navigation_bar.security": "セキュリティ",
-  "notification.and_n_others": "と、その他 {count, plural, one {#} other {#}}",
   "notification.favourite": "{name}さんがあなたのトゥートをお気に入りに登録しました",
   "notification.follow": "{name}さんにフォローされました",
   "notification.mention": "{name}さんがあなたに返信しました",
