--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -103,7 +103,7 @@
   "confirmations.logout.confirm": "ログアウト",
   "confirmations.logout.message": "本当にログアウトしますか？",
   "confirmations.mute.confirm": "ミュート",
-  "confirmations.mute.explanation": "これにより彼らのトゥートと返信は見えなくなりますが、引き続きあなたをフォローしトゥートを見ることができます。",
+  "confirmations.mute.explanation": "これにより相手のトゥートと返信は見えなくなりますが、引き続きあなたをフォローしトゥートを見ることはできます。",
   "confirmations.mute.message": "本当に{name}さんをミュートしますか？",
   "confirmations.redraft.confirm": "削除して下書きに戻す",
   "confirmations.redraft.message": "本当にこのトゥートを削除して下書きに戻しますか？ このトゥートへのお気に入り登録やブーストは失われ、返信は孤立することになります。",
@@ -152,6 +152,10 @@
   "empty_column.mutes": "まだ誰もミュートしていません。",
   "empty_column.notifications": "まだ通知がありません。他の人とふれ合って会話を始めましょう。",
   "empty_column.public": "ここにはまだ何もありません！ 公開で何かを投稿したり、他のサーバーのユーザーをフォローしたりしていっぱいにしましょう",
+  "error.unexpected_crash.explanation": "不具合かブラウザの互換性問題のため、このページを正しく表示できませんでした。",
+  "error.unexpected_crash.next_steps": "ページの再読み込みを試してください。それでも解決しない場合、別のアプリかブラウザを使えば使用できる場合もあります。",
+  "errors.unexpected_crash.copy_stacktrace": "スタックトレースをクリップボードにコピー",
+  "errors.unexpected_crash.report_issue": "問題を報告",
   "follow_request.authorize": "許可",
   "follow_request.reject": "拒否",
   "getting_started.developers": "開発",
@@ -160,7 +164,7 @@
   "getting_started.heading": "スタート",
   "getting_started.invite": "招待",
   "getting_started.open_source_notice": "Mastodonはオープンソースソフトウェアです。誰でもGitHub ( {github} ) から開発に参加したり、問題を報告したりできます。",
-  "getting_started.security": "セキュリティ",
+  "getting_started.security": "アカウント設定",
   "getting_started.terms": "プライバシーポリシー",
   "hashtag.column_header.tag_mode.all": "と {additional}",
   "hashtag.column_header.tag_mode.any": "か {additional}",
